https://www.hackerrank.com/challenges/jim-and-the-jokes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(algorithm)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(algorithm main.cpp alg/algorithm.cpp alg/algorithm.h hacker_rank.h)
+add_executable(algorithm main.cpp alg/my_algorithm.cpp alg/my_algorithm.h hacker_rank.h)
