--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(algorithm)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(algorithm main.cpp alg/my_algorithm.cpp alg/my_algorithm.h exam/hacker_rank.h exam/ebook.h)
+add_executable(algorithm main.cpp alg/my_algorithm.cpp alg/my_algorithm.h exam/hacker_rank.h exam/ebook_150_test.h exam/ebook_struct_algorithm.h)
 
